Added all controllers

--- a/AT.Membership.Database/AT.Membership.Database.csproj
+++ b/AT.Membership.Database/AT.Membership.Database.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\AT.Common\AT.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
