small adjusting in layout

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /AT.Membership.UI/wwwroot/images/LoTR.jpg
 /AT.Membership.UI/wwwroot/images/IronMan.jpg
 /AT.Membership.UI/wwwroot/images/GoT.jpg
+/AT.Membership.UI/wwwroot/images/test.jpg
