--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /AT.Membership.UI/wwwroot/images/IronMan.jpg
 /AT.Membership.UI/wwwroot/images/GoT.jpg
 /AT.Membership.UI/wwwroot/images/test.jpg
+/AT.Membership.UI/wwwroot/images
